--- a/index.html
+++ b/index.html
@@ -20,17 +20,29 @@
 	<script type="text/babel">
 	
 		class Box extends React.Component {
-			componentWillMount() {
-				alert('component is about to mount')
+			constructor(props) {
+				super(props)
+				this.state = {
+					backgroundColor: 'purple'
+				}
+				this.update = this.update.bind(this)
 			}
 			
-			componentDidMount() {
-				alert('component has mounted')
+			update() {
+				this.setState({
+					backgroundColor: 'green'
+				})
+			}
+			
+			componentDidUpdate() {
+				alert('component has been updated!')
 			}
 			
 			render() {
 				return (
-					<div id="myDiv"></div>
+					<div id="myDiv"
+						 style={this.state}
+						 onClick={this.update}></div>
 				)
 			}
 		}
